--- a/example/dtPINN_example_convection.ipynb
+++ b/example/dtPINN_example_convection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "killing-acceptance",
+   "id": "cheap-organization",
    "metadata": {},
    "source": [
     "### Step 0: Get packages and helper functions"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "neither-lawyer",
+   "id": "active-omega",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "\n",
     "import numpy as np; import torch; import time\n",
     "\n",
+    "# Import source/helper functions\n",
     "from misc_helper import combine_layers, get_dt, get_userPar, training_loop, make_gif, load_log\n",
     "from plot_helper import reference_plot, sample_plot\n",
     "from trainingData_helper import generate_trainData\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rapid-measure",
+   "id": "organizational-hamilton",
    "metadata": {},
    "source": [
     "## Step 1: Define PDE problem and visualize "
@@ -46,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "billion-defensive",
+   "id": "gentle-regular",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-portrait",
+   "id": "hired-brazil",
    "metadata": {},
    "source": [
     "## Step 2: dtPINN user settings"
@@ -89,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "personal-clerk",
+   "id": "great-kitty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
     "lbfgs_params = [0.1, 500, None, -1, -1, 50] # Optimization Hyperparameters for LBFGS [learning rate, max iterations, max evaluations, tolerance gradient, tolerance change, history size]\n",
     "adaptive_activation = 0 # Adaptive activation functions in NN\n",
     "dirichlet_bc = 0 # Use Dirichlet boundary condtions based on reference solution (0 = no, 1 = yes), number of points will depend on reference solution not user-defined N_b\n",
-    "learned_weights = 0 \n",
+    "learned_weights = 0 # Deprecated\n",
     "lambda_w = 100 # Weight applied to non PDE-reisudal loss terms\n",
     "\n",
     "### Training data parameters\n",
@@ -133,9 +134,9 @@
     "## 4. Choose window-sweeping parameters [weighting scheme, scheme hyperparameters]\n",
     "window_scheme = 'none'\n",
     "scheme_parameters = [1*10**(-1), 10**(-9), 1*10**(-1), 1]\n",
-    "# [(If 'none': , If 'uniform' or 'linear': width, propogate loss tolerance, dt, scale; \n",
-    "# If 'erf': sharpness, propogate loss tolerance, dt, scale, set cutoff tolerance; \n",
-    "# If 'causual_weights': epsilon), bound tolerance]\n",
+    "# If 'none': NA, If 'uniform' or 'linear': width, propogate loss tolerance, dt, scale, use bc-set, use null-set, do adam iterations after propgating (L-BFGS nan's for large steps); \n",
+    "# If 'erf': sharpness, propogate loss tolerance, dt, scale, set cutoff tolerance, use bc-set, use null-set; \n",
+    "# If 'causual_weights': epsilon), bound tolerance\n",
     "\n",
     "userPar = get_userPar(path, pde_type, input_encoding, M, L, layers, adam_params, lbfgs_params, adaptive_activation, learned_weights, N_x, N_t, N_f, N_0, N_b, N_i, collocation_sampling,\\\n",
     "                     num_partitions, dt, dS, causal_dS, interface_condition, layer_transfer, layer_trainability, window_scheme, scheme_parameters, PDE, stacked_tol, lambda_w, dirichlet_bc)"
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desirable-retention",
+   "id": "cleared-parking",
    "metadata": {},
    "source": [
     "### Step 2.1: Generate and visualize training data"
@@ -152,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "reliable-header",
+   "id": "subject-express",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-feature",
+   "id": "appointed-absorption",
    "metadata": {},
    "source": [
     "## Step 3: Train model and visualize"
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "answering-librarian",
+   "id": "geological-situation",
    "metadata": {},
    "source": [
     "### Step 3.1: Define training and visualization parameters"
@@ -192,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "needed-origin",
+   "id": "amazing-flexibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improved-brick",
+   "id": "naval-split",
    "metadata": {},
    "source": [
     "### Step 3.2: Initalize the model"
@@ -217,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dental-clinton",
+   "id": "posted-wright",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cheap-verification",
+   "id": "applicable-sandwich",
    "metadata": {},
    "source": [
     "### Step 3.3: Train the model"
@@ -244,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "young-services",
+   "id": "exclusive-pursuit",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occupational-injury",
+   "id": "unnecessary-moderator",
    "metadata": {},
    "source": [
     "### Step 3.4: Make animation if figures were saved or load run log"
@@ -700,11 +701,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "widespread-origin",
+   "id": "disturbed-section",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if userPar['save_fig'] == 1:\n",
+    "if userPar['animation'] == 1:\n",
     "    make_gif(userPar)\n",
     "    \n",
     "if userPar['log'] == 1:\n",
@@ -714,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "typical-speech",
+   "id": "apparent-stevens",
    "metadata": {},
    "outputs": [],
    "source": []
